src/components/Recipe/Recipe.css
.recipe-modal-container {
    min-height: 120px;
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.6);
    display: flex;
    align-items: center;
    justify-content: center;
}

.recipe-modal-internal-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    border: 2px outset pink;
    border-radius: 10px;
    background-color: rgb(253, 216, 222);
    height: 80%;
    padding: 25px;
    box-shadow: 5px 5px 5px;
}


@media (min-width: 600px) {
    .recipe-modal-internal-container {
        width: 50%;
    }
}

@media (max-width: 600px) {
    .recipe-modal-internal-container {
        width: 80%;
    }
}

.recipe-modal-recipe-container{
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.recipe-modal-name {
    color: black
}

.recipe-modal-ingredients-list{
    color: black;
    width: 100%;
}

.recipe-modal-notes{
    color: black;
    width: 100%;
    padding-left: 15px;
}

.recipe-modal-buttons-container {
    display: flex;
    width: 100%;
    justify-content: space-around;
}

.recipe-modal-button {
    width: 40%;
    height: 40px;
    border: 1px solid white;
    border-radius: 5px;
    background-color: rgb(255, 114, 114);
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

